<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/baseline_person_black_24dp"
            android:title="@string/menu_users" />
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/baseline_history_black_24dp"-->
<!--            android:title="@string/menu_history" />-->
        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/baseline_workspace_premium_black_24dp"
            android:title="@string/menu_debug" />
        <item
            android:id="@+id/nav_support"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/contact_support" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_black_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>