<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothReader">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/side_nav_bar"
        app:popupTheme="@style/AppTheme.PopupOverlay">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/toolbar">

        <ListView
            android:id="@+id/in"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_weight="1"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"></ListView>

        <LinearLayout
            android:layout_width="256dp"
            android:layout_height="228dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@mipmap/app_icon" />

            <TextView
                android:id="@+id/textSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <!-- <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
         android:hint="@string/please_enter_numbers_or_letters"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
         android:layout_below="@+id/ll"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In ID"
                    android:textColor="@color/black" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/EnrolID"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />


                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/Verify"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button

                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/Identify"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/DeleteID"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/ClearID"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button80"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/Test"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="In Host"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/EnrolHost"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />


                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/CaptureHost"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/Match"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button16"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/getimage200"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/getimage288"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button21"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/getimage360"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button17"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/getdata"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:visibility="invisible" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:visibility="invisible" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Smart Card"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/WriteFPCard"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/ReadFPCard"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />


                <Button
                    android:id="@+id/button18"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="-6dp"
                    android:layout_weight="1"
                    android:text="@string/FPCardMatch"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button13"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/CardSn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/ReadDataCard"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/WriteDataCard"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Device"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button14"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/getdevsn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/getbat"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />


                <Button
                    android:id="@+id/button19"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:text="@string/getversion"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:theme="@style/AutoButton" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
